<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddUserFragment"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgAddUser"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/id_account_circle"
            app:shapeAppearanceOverlay="@style/circleImg"
            app:strokeWidth="4dp"
            app:strokeColor="@color/pink_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/padding_large"
            android:padding="@dimen/padding_min"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imgAddUser"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/padding_default"
            android:layout_marginTop="@dimen/padding_default"
            app:endIconMode="clear_text"
            android:hint="@string/add_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAddName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilAddName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/padding_default"
            android:layout_marginTop="@dimen/padding_default"
            app:endIconMode="clear_text"
            android:hint="@string/add_last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAddLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilAddLastName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/padding_default"
            android:layout_marginTop="@dimen/padding_default"
            app:endIconMode="clear_text"
            android:hint="@string/add_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAddEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilAddEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/padding_default"
            android:layout_marginTop="@dimen/padding_default"
            app:endIconMode="clear_text"
            android:hint="@string/add_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAddPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilAddPhone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/padding_default"
            android:layout_marginTop="@dimen/padding_default"
            app:endIconMode="password_toggle"
            android:hint="@string/add_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAddPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilAddPass"
            android:layout_marginTop="@dimen/padding_large"
            android:layout_marginHorizontal="@dimen/padding_extra_large"
            app:cornerRadius="16pt"
            android:text="@string/save"
            app:icon="@drawable/ic_save"
            app:iconGravity="textEnd"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbIsAdmin"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toEndOf="@+id/imgAddUser"
            app:layout_constraintTop_toTopOf="@+id/imgAddUser"
            android:layout_marginStart="@dimen/padding_large"
            android:button="@drawable/state_cb_admin"
            android:buttonTint="@color/pink_300"
            android:checked="false"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>