<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayoutAuth"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".AuthActivity" android:layout_height="match_parent"
    android:layout_width="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="110dp"
        app:layout_constraintWidth="100dp"
        app:layout_constraintHeight="100dp"
        app:shapeAppearanceOverlay="@style/circleImg"
        app:strokeWidth="8dp"
        android:padding="8dp"
        app:strokeColor="@color/pink_300"
        android:background="@color/pink_200"
        android:elevation="18dp"
        android:src="@drawable/saboriarte" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginStart="@dimen/padding_default"
        android:layout_marginEnd="@dimen/padding_default"
        app:cardElevation="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_min"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="@dimen/padding_min"
                android:text="@string/tvLogin"
                android:textColor="#FA8FB1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_default"
                android:layout_marginTop="@dimen/padding_default"
                android:layout_marginEnd="@dimen/padding_default"
                android:hint="@string/strEmail"
                app:cornerRadius="16pt"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLogin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPass"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_default"
                android:layout_marginTop="@dimen/padding_default"
                android:layout_marginEnd="@dimen/padding_default"
                android:hint="@string/strPass"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_default"
                android:layout_marginEnd="@dimen/padding_large"
                android:layout_marginBottom="@dimen/padding_default"
                android:text="@string/strBtLogin"
                android:textColor="#FA8FB1"
                android:textSize="20sp"
                app:cornerRadius="16pt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilPass"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>